# chat-bot

./: .dockerignore  .env.aws.example  .env.example  .env.local.example  .env.local.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AWS_ARCHITECTURE.md  AWS_MIGRATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile.dev  Dockerfile.prod  EMBEDDING_ARCHITECTURE.md  EMBEDDING_SYSTEM_README.md  FINAL_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPROVING_RAG_ACCURACY.md  LOCALSTACK_DESKTOP_SETUP.md  LOCALSTACK_DOCKER.md  LOCAL_ARCHITECTURE.md  LOCAL_SETUP_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  NEXT_STEPS.md  POSTGRESQL_CLEANUP_PLAN.md  QUICKSTART.md  QUICKSTART_WITH_LOCALSTACK_DESKTOP.md  QUICK_START.md  README.md  README_AWS.md  README_LOCAL.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  SETUP_SUMMARY_LOCALSTACK_DESKTOP.md  (+17 more)
.claude/: settings.local.json
alembic/: env.py  seed.py
alembic/versions/: 001_initial_schema.py  002_add_documents_table.py  2025_01_13_1530-add_total_tokens_to_conversations.py  2025_11_06_1357-75b73c34eefd_make_user_groups_added_by_not_null.py  2025_11_06_1417-3216549452f3_make_chatbot_assignments_assigned_by_.py  2025_11_06_1417-f49482a711ee_change_chatbot_assignments_fk_to_.py  2025_11_09_1215-e6f493a16494_create_tables.py  (+14 more)
app/: Dockerfile  main.py  requirements.txt
app/agents/: __init__.py  (+1 more)
discord_bot/: Dockerfile  bot.py
docker/: Dockerfile  init.sql
docs/: GITLAB_TESTING_GUIDE.md  LLM_SWITCHING_GUIDE.md  README.md  orchestrator-architecture.md  orchestrator-implementation.md  orchestrator-quickstart.md  orchestrator-terraform.md
embedding-data/: Design doc _ 02.Taxi ticket.xlsx
scripts/: add_sample_data.py  add_summary_documents.py  build_vector_index.py  deploy.ps1  deploy.py  deploy_full_system.ps1  deploy_lambdas.ps1  deploy_lambdas.py  deploy_lambdas.sh  embed_excel_data.py  embed_via_api.py  fix_imports.py  fix_migration_chain.py  manual_trigger.json  monitor_embedding.ps1  monitor_embedding.sh  run_data_fetcher.py  run_tests.bat  run_tests.sh  setup_eventbridge_cronjobs.py  setup_localstack.py  setup_s3_triggers.py  test_s3_event.json  wait_for_db.py
src/: __init__.py  main.py
terraform/: main.tf  outputs.tf  tfplan  variables.tf
tests/: README.md  __init__.py  conftest.py  requirements.txt
(+389 files in other folders)
